change submodule name and refractor pom.xml