@@ -5,9 +5,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.workbei</groupId>
-    <artifactId>com.workbei.main</artifactId>
+    <artifactId>workbei-main</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <url>https://www.com.workbei.com</url>
     <modules>
         <module>api</module>
         <module>dao</module>
@@ -15,28 +16,29 @@
         <module>listener</module>
     </modules>
     <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.version>5.1.3.RELEASE</spring.version>
     </properties>
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>com.workbei</groupId>
-                <artifactId>com.workbei.main.api</artifactId>
+                <artifactId>workbei-main-api</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.workbei</groupId>
-                <artifactId>com.workbei.main.dao</artifactId>
+                <artifactId>workbei-main-dao</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.workbei</groupId>
-                <artifactId>com.workbei.main.service</artifactId>
+                <artifactId>workbei-main-service</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
             <dependency>
                 <groupId>com.workbei</groupId>
-                <artifactId>com.workbei.main.listener</artifactId>
+                <artifactId>workbei-main-listener</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
             <!--spring 相关-->
@@ -243,6 +245,13 @@
     </dependencyManagement>
     <build>
         <plugins>
+            <!--clean阶段-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.1.0</version>
+            </plugin>
+            <!--compile阶段-->
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
@@ -253,36 +262,85 @@
                     <!--<encoding>UTF-8</encoding>-->
                 </configuration>
             </plugin>
-            <!--<plugin>-->
-            <!--<groupId>org.apache.maven.plugins</groupId>-->
-            <!--<artifactId>maven-surefire-report-plugin</artifactId>-->
-            <!--<version>3.0.0-M1</version>-->
-            <!--<configuration>-->
-            <!--<outputDirectory>${basedir}/target/newsite</outputDirectory>-->
-            <!--</configuration>-->
-            <!--</plugin>-->
-            <!--<plugin>-->
-            <!--<groupId>org.apache.maven.plugins</groupId>-->
-            <!--<artifactId>maven-site-plugin</artifactId>-->
-            <!--<version>3.7.1</version>-->
-            <!--<configuration>-->
-            <!--<outputDirectory>${basedir}/target/newsite</outputDirectory>-->
-            <!--</configuration>-->
-            <!--</plugin>-->
-            <!--<plugin>-->
-            <!--<groupId>org.jacoco</groupId>-->
-            <!--<artifactId>jacoco-maven-plugin</artifactId>-->
-            <!--<version>0.8.2</version>-->
-            <!--<executions>-->
-            <!--<execution>-->
-            <!--<id>coverage-report</id>-->
-            <!--<phase>test</phase>-->
-            <!--<goals>-->
-            <!--<goal>report</goal>-->
-            <!--</goals>-->
-            <!--</execution>-->
-            <!--</executions>-->
-            <!--</plugin>-->
+            <!--test阶段：单元测试-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.1</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
+            <!--test阶段：集成测试-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>2.22.1</version>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
+            <!--install阶段-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+                <version>3.0.0-M1</version>
+            </plugin>
+            <!--site阶段-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>3.7.1</version>
+            </plugin>
+            <!--deploy阶段-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>3.0.0-M1</version>
+            </plugin>
+            <!--与site配合使用，生成project info-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>3.0.0</version>
+            </plugin>
+            <!--war包-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.2.2</version>
+            </plugin>
         </plugins>
     </build>
+    <reporting>
+        <plugins>
+            <!--将测试报告插入到site中-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>3.0.0-M2</version>
+            </plugin>
+            <!--检查代码缺陷-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-pmd-plugin</artifactId>
+                <version>3.11.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jxr-plugin</artifactId>
+                <version>3.0.0</version>
+            </plugin>
+        </plugins>
+    </reporting>
+    <distributionManagement>
+        <site>
+            <id>www.workbei.com</id>
+            <url>https://www.workbei.com</url>
+        </site>
+    </distributionManagement>
 </project>
